--- a/examples/format_only.yaml
+++ b/examples/format_only.yaml
@@ -1,19 +1,38 @@
-name: Format Transcript Only
+name: Format Transcript
 description: Format a transcript file by removing unwanted patterns and timestamps
-input: ./input/transcript.srt  # Can be overridden with the --input CLI flag
 output: ./output
+# Results will be stored in a subfolder named like "Format_Transcript-20231015-120530"
 
 steps:
   - name: Format Transcript
     module: format
     parameters:
-      # Input is inherited from workflow, but can be overridden here
-      # input: "./custom_transcript.srt"  # Uncomment to override workflow input
-      outputFileName: "formatted_transcript"  # Custom output file name (without extension)
-      removePatterns:
-        - "Transcribed by gnzdotmx\\.ai"
-        - "Go Unlimited at gnzdotmx\\.ai"
-        - "This file is longer than 30 minutes"
-        - "gnzdotmx.ai"
-        - "Subtítulos realizados por la comunidad de Amara\\.org"
-      cleanFileSuffix: "_clean"  # Suffix added to formatted files (e.g., transcript_clean.txt) 
+      # Input: Transcript file to format
+      # Can be specified in three ways:
+      # 1. Via CLI using -i flag: studioflowai run -w format_only.yaml -i ./input/transcript.srt
+      # 2. In the workflow file (as shown below)
+      # 3. From a previous step's output in the workflow
+      input: "./input/transcript.srt"                 # Transcript file to format (REQUIRED - replace with your transcript path)
+      # Output: Formatted transcript in output directory
+      outputFileName: "transcript_formatted"          # Will create transcript_formatted.txt in output directory
+      # Optional: Customize the formatting
+      removeTimestamps: true                         # Remove timestamp lines
+      removePatterns:                                # Patterns to remove from text
+        - "\\[.*?\\]"                               # Remove text in square brackets
+        - "\\(.*?\\)"                               # Remove text in parentheses
+        - "^\\d+$"                                  # Remove standalone numbers
+      # Optional: Add custom patterns
+      # customPatterns:
+      #   - "\\[Music\\]"                           # Remove [Music] markers
+      #   - "\\[Applause\\]"                        # Remove [Applause] markers
+
+# Example usage:
+# 1. Using CLI input:
+#    studioflowai run -w format_only.yaml -i ./input/transcript.srt
+#
+# 2. Using workflow input parameter:
+#    studioflowai run -w format_only.yaml
+#
+# 3. As part of a larger workflow:
+#    - First run the transcribe module to get transcript
+#    - Then run this workflow to format it 
