--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # Project files
 output/
 tests/
+vendor/
 gnzedition
 studioflowaibin
+credentials.json
+examples/gnz_*
+prompts/gnz_*
 
 # Go specific
 *.exe
